--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,15 +1,21 @@
-CC = c++ 
-FLAGS = -Wall -Wextra -Werror  -std=c++98
-EX = PhoneBook
-SRC = main.cpp / Contact.cpp / PhoneBook.cpp
+CXX = c++
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
+SRC = Contact.cpp PhoneBook.cpp main.cpp
 OBJ = $(SRC:.cpp=.o)
+NAME = phonebook
 
-all : $(EX)
+all: $(NAME)
 
-$(EX) : $(OBJ)
-	$(CC) $(SRC) -o $(EX) $(FLAGS)
-clean :
-	rm $(OBJ)
-fclean : clean
-	rm $(EX)
-re : fclean all
+$(NAME): $(OBJ)
+	$(CXX) $(CXXFLAGS) -o $@ $^
+
+clean:
+	rm -f $(OBJ)
+
+fclean: clean
+	rm -f $(NAME)
+
+re: fclean all
+
+.PHONY: all clean fclean re
